# someStuff

lab1/: CMakeLists.txt  Vector2D.cpp  Vector2D.h  main.cpp
snake/: CMakeLists.txt  declarations.h  food.cpp  food.h  gameObject.h  init.cpp  init.h  main.cpp  main_body.cpp  main_body.h  map.cpp  map.h  snake.cpp  snake.h
